[package]
name = "sc-consensus-randomness-beacon"
version = "0.0.1"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "Randomness-Beacon consensus client"
homepage = "https://idealabs.network"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
codec.workspace = true
serde = { workspace = true, features = ["derive"] }
tokio.workspace = true
libp2p.workspace = true
log.workspace = true
prost.workspace = true
futures.workspace = true
prometheus-endpoint.workspace = true
scale-info.workspace = true
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true

frame-system = { workspace = true, default-features = true }
sc-utils.workspace = true
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-consensus-aura.workspace = true
sc-consensus-manual-seal.workspace = true
sc-telemetry.workspace = true
sc-transaction-pool-api.workspace = true
sp-api.workspace = true
sp-application-crypto = { workspace = true, default-features = true }
sp-blockchain.workspace = true
sp-block-builder.workspace = true
sp-consensus.workspace = true
sp-consensus-aura.workspace = true
sp-consensus-randomness-beacon.workspace = true
sp-core.workspace = true
sp-idn-crypto.workspace = true
sp-inherents.workspace = true
sp-keystore.workspace = true
sp-runtime.workspace = true
sp-timestamp.workspace = true
sp-transaction-pool.workspace = true

# local
pallet-randomness-beacon = { workspace = true, default-features = true }

# cumulus 
cumulus-client-consensus-common.workspace = true
cumulus-client-consensus-aura.workspace = true
substrate-frame-rpc-system.workspace = true

# arkworks dependencies
ark-bls12-381.workspace = true
ark-serialize.workspace = true

# Force static_init 1.0.4 to fix parking_lot dependency issue on Linux nightly
# (transitive dep via sc-service -> reed-solomon-novelpoly)
static_init = { workspace = true }

[dev-dependencies]
async-trait.workspace = true
async-std.workspace = true
frame-support.workspace = true
mockall.workspace = true
parking_lot.workspace = true
pallet-balances = { workspace = true, default-features = true }
pallet-randomness-beacon = { workspace = true, default-features = true }
rand.workspace = true
tokio.workspace = true
sc-block-builder.workspace = true
sc-service.workspace = true
sp-externalities.workspace = true
sp-idn-crypto.workspace = true
sp-idn-traits.workspace = true
sp-io.workspace = true
sp-state-machine.workspace = true
sp-version.workspace = true
tracing-test.workspace = true
sp-tracing.workspace = true
