[package]
name = "idn-example-consumer-contract"
version = "0.1.0"
authors = ["Ideal Network Contributors <info@ideal.network>"]
license = "MIT OR Apache-2.0"
homepage = "https://ideal.network"
repository = "https://github.com/ideal-lab5/idn-sdk"
edition = "2021"
readme = "README.md"
description = "An example consumer contract for Ideal Network services"

[workspace]

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
sha2 = { version = "0.10.8", default-features = false }
idn-contracts = { path = "../..", default-features = false }
sp-idn-traits = { path = "../../../primitives/traits", default-features = false }
frame-support = { version = "40.1.0", default-features = false }
log = { version = "0.4.26", default-features = false }
bp-idn = { path = "../../../chains/ideal-network/bridge", default-features = false }

[dev-dependencies]
serde = { version = "1.0", optional = false }
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale-info/std",
    "sha2/std",
    "idn-contracts/std",
    "sp-idn-traits/std",
    "frame-support/std",
    "log/std"
]

ink-as-dependency = []
e2e-tests = []
