[package]
name = "rand-extension-example-contract"
version = "0.1.0"
authors = ["Ideal Network <admin@idealnetwork.io>"]
edition = "2021"
publish = false

[dependencies]
ink = { version = "5.1.1", default-features = false }
idn-contracts = { path = "../../idn-contracts", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "idn-contracts/std",
]
ink-as-dependency = []